; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/extr_khrn_int_image.c_khrn_image_get_z_size.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/extr_khrn_int_image.c_khrn_image_get_z_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IMAGE_FORMAT_Z = common dso_local global i32 0, align 4
@DEPTH_32_TLBD = common dso_local global i32 0, align 4
@DEPTH_COL_64_TLBD = common dso_local global i32 0, align 4
@IMAGE_FORMAT_PIXEL_SIZE_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @khrn_image_get_z_size(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @khrn_image_is_depth(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %29

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @IMAGE_FORMAT_Z, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %29

12:                                               ; preds = %7
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @DEPTH_32_TLBD, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %20, label %16

16:                                               ; preds = %12
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @DEPTH_COL_64_TLBD, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %16, %12
  store i32 24, i32* %2, align 4
  br label %30

21:                                               ; preds = %16
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* @IMAGE_FORMAT_PIXEL_SIZE_MASK, align 4
  %24 = and i32 %22, %23
  switch i32 %24, label %27 [
    i32 128, label %25
    i32 129, label %26
  ]

25:                                               ; preds = %21
  store i32 24, i32* %2, align 4
  br label %30

26:                                               ; preds = %21
  store i32 16, i32* %2, align 4
  br label %30

27:                                               ; preds = %21
  %28 = call i32 (...) @UNREACHABLE()
  store i32 0, i32* %2, align 4
  br label %30

29:                                               ; preds = %7, %1
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %29, %27, %26, %25, %20
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i64 @khrn_image_is_depth(i32) #1

declare dso_local i32 @UNREACHABLE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
